--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "next dev ./src",
+    "build": "next build ./src",
+    "start": "next start ./src"
   },
   "dependencies": {
     "js-cookie": "^2.2.1",
